--- a/index.html
+++ b/index.html
@@ -15,10 +15,28 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
-  <body></body>
+  <body>
+    <section class="container-one">
+      <div class="circle">
+        <img src="./images/icon-star.svg" alt="orange star" />
+      </div>
+      <h1>How did we do?</h1>
+      <p>
+        Please let us know how we did with your support request. All feedback is appreciated to help us
+        improve our offering!
+      </p>
+      <form>
+        <div class="container-circles">
+          <button class="circle circle__hover" value="1">1</button>
+          <button class="circle circle__hover" value="2">2</button>
+          <button class="circle circle__hover" value="3">3</button>
+          <button class="circle circle__hover" value="4">4</button>
+          <button class="circle circle__hover" value="5">5</button>
+        </div>
+        <button class="submit">Submit</button>
+      </form>
+    </section>
+  </body>
 </html>
-<!-- How did we do? Please let us know how we did with your support request. All feedback is appreciated to
-  help us improve our offering! 1 2 3 4 5 Submit -->
-
 <!-- You selected out of 5 Thank you! We appreciate you taking the time to give a rating. If you ever need more
   support, don’t hesitate to get in touch! -->
