--- a/index.html
+++ b/index.html
@@ -40,3 +40,4 @@
 </html>
 <!-- You selected out of 5 Thank you! We appreciate you taking the time to give a rating. If you ever need more
   support, don’t hesitate to get in touch! -->
+<!-- Update -->
