add focus on buttons with js

--- a/index.html
+++ b/index.html
@@ -25,19 +25,18 @@
         Please let us know how we did with your support request. All feedback is appreciated to help us
         improve our offering!
       </p>
-      <form>
+      <div>
         <div class="container-circles">
-          <button class="circle circle__hover" value="1">1</button>
-          <button class="circle circle__hover" value="2">2</button>
-          <button class="circle circle__hover" value="3">3</button>
-          <button class="circle circle__hover" value="4">4</button>
-          <button class="circle circle__hover" value="5">5</button>
+          <button class="circle circle__hover circle__focus" value="1">1</button>
+          <button class="circle circle__hover circle__focus" value="2">2</button>
+          <button class="circle circle__hover circle__focus" value="3">3</button>
+          <button class="circle circle__hover circle__focus" value="4">4</button>
+          <button class="circle circle__hover circle__focus" value="5">5</button>
         </div>
-        <button class="submit">Submit</button>
-      </form>
+        <button class="submit" type="submit" value="submit">Submit</button>
+      </div>
     </section>
   </body>
 </html>
 <!-- You selected out of 5 Thank you! We appreciate you taking the time to give a rating. If you ever need more
   support, don’t hesitate to get in touch! -->
-<!-- Update -->
