add container after clickt event

--- a/index.html
+++ b/index.html
@@ -27,17 +27,23 @@
       </p>
       <div>
         <div class="container-circles">
-          <button class="circle circle__hover circle__focus" value="1">1</button>
-          <button class="circle circle__hover circle__focus" value="2">2</button>
-          <button class="circle circle__hover circle__focus" value="3">3</button>
-          <button class="circle circle__hover circle__focus" value="4">4</button>
-          <button class="circle circle__hover circle__focus" value="5">5</button>
+          <button class="circle circle__hover circle__focus" type="button" value="1">1</button>
+          <button class="circle circle__hover circle__focus" type="button" value="2">2</button>
+          <button class="circle circle__hover circle__focus" type="button" value="3">3</button>
+          <button class="circle circle__hover circle__focus focus" type="button" value="4">4</button>
+          <button class="circle circle__hover circle__focus" type="button" value="5">5</button>
         </div>
         <button class="submit" type="submit" value="submit">Submit</button>
       </div>
     </section>
-    <section class="container-two"></section>
+    <section class="container-two">
+      <img src="./images/illustration-thank-you.svg" alt="#" />
+      <div class="result">Temporary</div>
+      <p class="thanks">Thank you!</p>
+      <p class="appreciation">
+        We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to
+        get in touch!
+      </p>
+    </section>
   </body>
 </html>
-<!-- You selected out of 5 Thank you! We appreciate you taking the time to give a rating. If you ever need more
-  support, don’t hesitate to get in touch! -->
