add README and screenshots

--- a/index.html
+++ b/index.html
@@ -16,34 +16,36 @@
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
   <body>
-    <section class="container-one">
-      <div class="circle">
-        <img src="./images/icon-star.svg" alt="orange star" />
-      </div>
-      <h1>How did we do?</h1>
-      <p>
-        Please let us know how we did with your support request. All feedback is appreciated to help us
-        improve our offering!
-      </p>
-      <div>
-        <div class="container-circles">
-          <button class="circle circle__hover circle__focus" type="button" value="1">1</button>
-          <button class="circle circle__hover circle__focus" type="button" value="2">2</button>
-          <button class="circle circle__hover circle__focus" type="button" value="3">3</button>
-          <button class="circle circle__hover circle__focus focus" type="button" value="4">4</button>
-          <button class="circle circle__hover circle__focus" type="button" value="5">5</button>
+    <main>
+      <section class="container-one">
+        <div class="circle">
+          <img src="./images/icon-star.svg" alt="orange star" />
         </div>
-        <button class="submit" type="submit" value="submit">Submit</button>
-      </div>
-    </section>
-    <section class="container-two">
-      <img src="./images/illustration-thank-you.svg" alt="#" />
-      <div class="result">Temporary</div>
-      <p class="thanks">Thank you!</p>
-      <p class="appreciation">
-        We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to
-        get in touch!
-      </p>
-    </section>
+        <h1>How did we do?</h1>
+        <p>
+          Please let us know how we did with your support request. All feedback is appreciated to help us
+          improve our offering!
+        </p>
+        <div>
+          <div class="container-circles">
+            <button class="circle circle__hover circle__focus" type="button" value="1">1</button>
+            <button class="circle circle__hover circle__focus" type="button" value="2">2</button>
+            <button class="circle circle__hover circle__focus" type="button" value="3">3</button>
+            <button class="circle circle__hover circle__focus focus" type="button" value="4">4</button>
+            <button class="circle circle__hover circle__focus" type="button" value="5">5</button>
+          </div>
+          <button class="submit" type="submit" value="submit">Submit</button>
+        </div>
+      </section>
+      <section class="container-two">
+        <img src="./images/illustration-thank-you.svg" alt="#" />
+        <div class="result">Temporary</div>
+        <p class="thanks">Thank you!</p>
+        <p class="appreciation">
+          We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to
+          get in touch!
+        </p>
+      </section>
+    </main>
   </body>
 </html>
